# infinite-analytics-backend

./: README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  oauth.py
backend/app/models/: user.py
backend/app/routers/: auth.py  binance.py  profile.py  weather.py
backend/app/schemas/: binance.py  user.py
backend/app/services/: user.py
backend/app/utils/: create_tables.py  deps.py  jwt.py
